--- a/app/frontend/src/styles.scss
+++ b/app/frontend/src/styles.scss
@@ -12,7 +12,7 @@ $corporate-green: (
   200: #9dd0c4,
   300: #75bdac,
   400: #58ae9a,
-  500: #416759, // Main corporate color
+  500: #3F6858, // Main corporate color actualizado
   600: #3b5f51,
   700: #335248,
   800: #2b453e,
