--- a/app/frontend/src/styles.scss
+++ b/app/frontend/src/styles.scss
@@ -152,3 +152,12 @@ th[_ngcontent-ng-c2596952125],
   background: #fff !important;
   border-radius: 50%;
 }
+
+/* Fondo blanco sólido para todos los selectores desplegables (mat-select) */
+::ng-deep .mat-select-trigger,
+::ng-deep .mat-select,
+::ng-deep .mat-select-value {
+  background: #fff !important;
+  color: #111 !important;
+  border-radius: 6px !important;
+}
