--- a/app/frontend/src/app/features/observaciones/components/observaciones-tab.component.html
+++ b/app/frontend/src/app/features/observaciones/components/observaciones-tab.component.html
@@ -23,10 +23,6 @@
     </div>
     <div class="table-container" *ngIf="observaciones.length > 0 && !loading">
       <table mat-table [dataSource]="observaciones" class="observaciones-table mat-elevation-4">
-        <ng-container matColumnDef="IdTransaccion">
-          <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let obs">{{ obs.IdTransaccion }}</td>
-        </ng-container>
         <ng-container matColumnDef="Descripcion">
           <th mat-header-cell *matHeaderCellDef>Descripción</th>
           <td mat-cell *matCellDef="let obs">{{ obs.Descripcion }}</td>
@@ -43,8 +39,8 @@
             </button>
           </td>
         </ng-container>
-        <tr mat-header-row *matHeaderRowDef="['IdTransaccion', 'Descripcion', 'Observaciones', 'actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['IdTransaccion', 'Descripcion', 'Observaciones', 'actions']"></tr>
+        <tr mat-header-row *matHeaderRowDef="['Descripcion', 'Observaciones', 'actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['Descripcion', 'Observaciones', 'actions']"></tr>
       </table>
       <mat-paginator
         [length]="totalObservaciones"
