--- a/app/frontend/src/app/features/expedientes/components/expediente-detail.component.html
+++ b/app/frontend/src/app/features/expedientes/components/expediente-detail.component.html
@@ -59,7 +59,7 @@
                 <mat-card>
                   <mat-card-header>
                     <mat-card-title>Datos Básicos</mat-card-title>
-                    <button mat-raised-button color="primary" class="edit-btn-inside" style="margin-left:auto;" (click)="editarExpediente()">
+                    <button mat-flat-button class="editar-prop-btn" style="margin-left:auto;" (click)="editarExpediente()">
                       <mat-icon>edit</mat-icon>
                       Editar
                     </button>
